# pygmailcleaner

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
pygmailcleaner/: main.py
pygmailcleaner/utils/: __init__.py  cli.py  commands.py  formatting.py  smpt.py  testing.py
tests/: test_cli.py  test_smpt.py
